--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
     "@mmc-cloud/eslint-config": "^1.0.3",
     "eslint": "^8.29.0",
     "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "regenerator-runtime": "^0.13.11",
+    "svg-baker-runtime": "^1.4.7",
+    "vue-style-loader": "^4.1.3"
   }
 }
